; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/hisilicon/kirin/extr_dw_drm_dsi.c_dw_drm_encoder_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/hisilicon/kirin/extr_dw_drm_dsi.c_dw_drm_encoder_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.drm_device = type { i32 }
%struct.drm_encoder = type { i64 }

@.str = private unnamed_addr constant [26 x i8] c"failed to find crtc mask\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@dw_encoder_funcs = common dso_local global i32 0, align 4
@DRM_MODE_ENCODER_DSI = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"failed to init dsi encoder\0A\00", align 1
@dw_encoder_helper_funcs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.drm_device*, %struct.drm_encoder*)* @dw_drm_encoder_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dw_drm_encoder_init(%struct.device* %0, %struct.drm_device* %1, %struct.drm_encoder* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.drm_device*, align 8
  %7 = alloca %struct.drm_encoder*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.drm_device* %1, %struct.drm_device** %6, align 8
  store %struct.drm_encoder* %2, %struct.drm_encoder** %7, align 8
  %10 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  %11 = load %struct.device*, %struct.device** %5, align 8
  %12 = getelementptr inbounds %struct.device, %struct.device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @drm_of_find_possible_crtcs(%struct.drm_device* %10, i32 %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %3
  %18 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %37

21:                                               ; preds = %3
  %22 = load i64, i64* %9, align 8
  %23 = load %struct.drm_encoder*, %struct.drm_encoder** %7, align 8
  %24 = getelementptr inbounds %struct.drm_encoder, %struct.drm_encoder* %23, i32 0, i32 0
  store i64 %22, i64* %24, align 8
  %25 = load %struct.drm_device*, %struct.drm_device** %6, align 8
  %26 = load %struct.drm_encoder*, %struct.drm_encoder** %7, align 8
  %27 = load i32, i32* @DRM_MODE_ENCODER_DSI, align 4
  %28 = call i32 @drm_encoder_init(%struct.drm_device* %25, %struct.drm_encoder* %26, i32* @dw_encoder_funcs, i32 %27, i32* null)
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %8, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %21
  %32 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %4, align 4
  br label %37

34:                                               ; preds = %21
  %35 = load %struct.drm_encoder*, %struct.drm_encoder** %7, align 8
  %36 = call i32 @drm_encoder_helper_add(%struct.drm_encoder* %35, i32* @dw_encoder_helper_funcs)
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %34, %31, %17
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i64 @drm_of_find_possible_crtcs(%struct.drm_device*, i32) #1

declare dso_local i32 @DRM_ERROR(i8*) #1

declare dso_local i32 @drm_encoder_init(%struct.drm_device*, %struct.drm_encoder*, i32*, i32, i32*) #1

declare dso_local i32 @drm_encoder_helper_add(%struct.drm_encoder*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
